headers/c.h

#    define librocksdb "librocksdb.dll"
#    define librocksdb "librocksdb.dylib"
#    define librocksdb "librocksdb.so"