src/rocksdb_c.nim


proc rocksdb_open*(options: ptr rocksdb_options_t; name: cstring; errptr: cstringArray): ptr rocksdb_t {.
    cdecl, importc: "rocksdb_open", dynlib: librocksdb.}
proc rocksdb_open_for_read_only*(options: ptr rocksdb_options_t; name: cstring;
                                error_if_log_file_exist: cuchar;
                                errptr: cstringArray): ptr rocksdb_t {.cdecl,
    importc: "rocksdb_open_for_read_only", dynlib: librocksdb.}
proc rocksdb_backup_engine_open*(options: ptr rocksdb_options_t; path: cstring;
                                errptr: cstringArray): ptr rocksdb_backup_engine_t {.
    cdecl, importc: "rocksdb_backup_engine_open", dynlib: librocksdb.}
proc rocksdb_backup_engine_create_new_backup*(be: ptr rocksdb_backup_engine_t;
    db: ptr rocksdb_t; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_backup_engine_create_new_backup", dynlib: librocksdb.}
proc rocksdb_backup_engine_purge_old_backups*(be: ptr rocksdb_backup_engine_t;
    num_backups_to_keep: uint32; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_backup_engine_purge_old_backups", dynlib: librocksdb.}
proc rocksdb_restore_options_create*(): ptr rocksdb_restore_options_t {.cdecl,
    importc: "rocksdb_restore_options_create", dynlib: librocksdb.}
proc rocksdb_restore_options_destroy*(opt: ptr rocksdb_restore_options_t) {.cdecl,
    importc: "rocksdb_restore_options_destroy", dynlib: librocksdb.}
proc rocksdb_restore_options_set_keep_log_files*(
    opt: ptr rocksdb_restore_options_t; v: cint) {.cdecl,
    importc: "rocksdb_restore_options_set_keep_log_files", dynlib: librocksdb.}
proc rocksdb_backup_engine_restore_db_from_latest_backup*(
    be: ptr rocksdb_backup_engine_t; db_dir: cstring; wal_dir: cstring;
    restore_options: ptr rocksdb_restore_options_t; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_backup_engine_restore_db_from_latest_backup",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_get_backup_info*(be: ptr rocksdb_backup_engine_t): ptr rocksdb_backup_engine_info_t {.
    cdecl, importc: "rocksdb_backup_engine_get_backup_info", dynlib: librocksdb.}
proc rocksdb_backup_engine_info_count*(info: ptr rocksdb_backup_engine_info_t): cint {.
    cdecl, importc: "rocksdb_backup_engine_info_count", dynlib: librocksdb.}
proc rocksdb_backup_engine_info_timestamp*(
    info: ptr rocksdb_backup_engine_info_t; index: cint): int64 {.cdecl,
    importc: "rocksdb_backup_engine_info_timestamp", dynlib: librocksdb.}
proc rocksdb_backup_engine_info_backup_id*(
    info: ptr rocksdb_backup_engine_info_t; index: cint): uint32 {.cdecl,
    importc: "rocksdb_backup_engine_info_backup_id", dynlib: librocksdb.}
proc rocksdb_backup_engine_info_size*(info: ptr rocksdb_backup_engine_info_t;
                                     index: cint): uint64 {.cdecl,
    importc: "rocksdb_backup_engine_info_size", dynlib: librocksdb.}
proc rocksdb_backup_engine_info_number_files*(
    info: ptr rocksdb_backup_engine_info_t; index: cint): uint32 {.cdecl,
    importc: "rocksdb_backup_engine_info_number_files", dynlib: librocksdb.}
proc rocksdb_backup_engine_info_destroy*(info: ptr rocksdb_backup_engine_info_t) {.
    cdecl, importc: "rocksdb_backup_engine_info_destroy", dynlib: librocksdb.}
proc rocksdb_backup_engine_close*(be: ptr rocksdb_backup_engine_t) {.cdecl,
    importc: "rocksdb_backup_engine_close", dynlib: librocksdb.}
proc rocksdb_checkpoint_object_create*(db: ptr rocksdb_t; errptr: cstringArray): ptr rocksdb_checkpoint_t {.
    cdecl, importc: "rocksdb_checkpoint_object_create", dynlib: librocksdb.}
proc rocksdb_checkpoint_create*(checkpoint: ptr rocksdb_checkpoint_t;
                               checkpoint_dir: cstring;
                               log_size_for_flush: uint64; errptr: cstringArray) {.
    cdecl, importc: "rocksdb_checkpoint_create", dynlib: librocksdb.}
proc rocksdb_checkpoint_object_destroy*(checkpoint: ptr rocksdb_checkpoint_t) {.
    cdecl, importc: "rocksdb_checkpoint_object_destroy", dynlib: librocksdb.}
proc rocksdb_open_column_families*(options: ptr rocksdb_options_t; name: cstring;
                                  num_column_families: cint;
                                  column_family_names: cstringArray;
    column_family_options: ptr ptr rocksdb_options_t; column_family_handles: ptr ptr rocksdb_column_family_handle_t;
                                  errptr: cstringArray): ptr rocksdb_t {.cdecl,
    importc: "rocksdb_open_column_families", dynlib: librocksdb.}
proc rocksdb_open_for_read_only_column_families*(options: ptr rocksdb_options_t;
    name: cstring; num_column_families: cint; column_family_names: cstringArray;
    column_family_options: ptr ptr rocksdb_options_t;
    column_family_handles: ptr ptr rocksdb_column_family_handle_t;
    error_if_log_file_exist: cuchar; errptr: cstringArray): ptr rocksdb_t {.cdecl,
    importc: "rocksdb_open_for_read_only_column_families", dynlib: librocksdb.}
proc rocksdb_list_column_families*(options: ptr rocksdb_options_t; name: cstring;
                                  lencf: ptr csize; errptr: cstringArray): cstringArray {.
    cdecl, importc: "rocksdb_list_column_families", dynlib: librocksdb.}
proc rocksdb_list_column_families_destroy*(list: cstringArray; len: csize) {.cdecl,
    importc: "rocksdb_list_column_families_destroy", dynlib: librocksdb.}
proc rocksdb_create_column_family*(db: ptr rocksdb_t;
                                  column_family_options: ptr rocksdb_options_t;
                                  column_family_name: cstring;
                                  errptr: cstringArray): ptr rocksdb_column_family_handle_t {.
    cdecl, importc: "rocksdb_create_column_family", dynlib: librocksdb.}
proc rocksdb_drop_column_family*(db: ptr rocksdb_t;
                                handle: ptr rocksdb_column_family_handle_t;
                                errptr: cstringArray) {.cdecl,
    importc: "rocksdb_drop_column_family", dynlib: librocksdb.}
proc rocksdb_column_family_handle_destroy*(a2: ptr rocksdb_column_family_handle_t) {.
    cdecl, importc: "rocksdb_column_family_handle_destroy", dynlib: librocksdb.}
proc rocksdb_close*(db: ptr rocksdb_t) {.cdecl, importc: "rocksdb_close",
                                     dynlib: librocksdb.}
proc rocksdb_put*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t; key: cstring;
                 keylen: csize; val: cstring; vallen: csize; errptr: cstringArray) {.
    cdecl, importc: "rocksdb_put", dynlib: librocksdb.}
proc rocksdb_put_cf*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t;
                    column_family: ptr rocksdb_column_family_handle_t;
                    key: cstring; keylen: csize; val: cstring; vallen: csize;
                    errptr: cstringArray) {.cdecl, importc: "rocksdb_put_cf",
    dynlib: librocksdb.}
proc rocksdb_delete*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t;
                    key: cstring; keylen: csize; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_delete", dynlib: librocksdb.}
proc rocksdb_delete_cf*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t;
                       column_family: ptr rocksdb_column_family_handle_t;
                       key: cstring; keylen: csize; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_delete_cf", dynlib: librocksdb.}
proc rocksdb_merge*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t;
                   key: cstring; keylen: csize; val: cstring; vallen: csize;
                   errptr: cstringArray) {.cdecl, importc: "rocksdb_merge",
    dynlib: librocksdb.}
proc rocksdb_merge_cf*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t;
                      column_family: ptr rocksdb_column_family_handle_t;
                      key: cstring; keylen: csize; val: cstring; vallen: csize;
                      errptr: cstringArray) {.cdecl, importc: "rocksdb_merge_cf",
    dynlib: librocksdb.}
proc rocksdb_write*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t;
                   batch: ptr rocksdb_writebatch_t; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_write", dynlib: librocksdb.}
##  Returns NULL if not found.  A malloc()ed array otherwise.
##    Stores the length of the array in *vallen.

proc rocksdb_get*(db: ptr rocksdb_t; options: ptr rocksdb_readoptions_t; key: cstring;
                 keylen: csize; vallen: ptr csize; errptr: cstringArray): cstring {.
    cdecl, importc: "rocksdb_get", dynlib: librocksdb.}
proc rocksdb_get_cf*(db: ptr rocksdb_t; options: ptr rocksdb_readoptions_t;
                    column_family: ptr rocksdb_column_family_handle_t;
                    key: cstring; keylen: csize; vallen: ptr csize;
                    errptr: cstringArray): cstring {.cdecl,
    importc: "rocksdb_get_cf", dynlib: librocksdb.}
##  if values_list[i] == NULL and errs[i] == NULL,
##  then we got status.IsNotFound(), which we will not return.
##  all errors except status status.ok() and status.IsNotFound() are returned.
## 
##  errs, values_list and values_list_sizes must be num_keys in length,
##  allocated by the caller.
##  errs is a list of strings as opposed to the conventional one error,
##  where errs[i] is the status for retrieval of keys_list[i].
##  each non-NULL errs entry is a malloc()ed, null terminated string.
##  each non-NULL values_list entry is a malloc()ed array, with
##  the length for each stored in values_list_sizes[i].

proc rocksdb_multi_get*(db: ptr rocksdb_t; options: ptr rocksdb_readoptions_t;
                       num_keys: csize; keys_list: cstringArray;
                       keys_list_sizes: ptr csize; values_list: cstringArray;
                       values_list_sizes: ptr csize; errs: cstringArray) {.cdecl,
    importc: "rocksdb_multi_get", dynlib: librocksdb.}
proc rocksdb_multi_get_cf*(db: ptr rocksdb_t; options: ptr rocksdb_readoptions_t;
    column_families: ptr ptr rocksdb_column_family_handle_t; num_keys: csize;
                          keys_list: cstringArray; keys_list_sizes: ptr csize;
                          values_list: cstringArray; values_list_sizes: ptr csize;
                          errs: cstringArray) {.cdecl,
    importc: "rocksdb_multi_get_cf", dynlib: librocksdb.}
proc rocksdb_create_iterator*(db: ptr rocksdb_t; options: ptr rocksdb_readoptions_t): ptr rocksdb_iterator_t {.
    cdecl, importc: "rocksdb_create_iterator", dynlib: librocksdb.}
proc rocksdb_create_iterator_cf*(db: ptr rocksdb_t;
                                options: ptr rocksdb_readoptions_t; column_family: ptr rocksdb_column_family_handle_t): ptr rocksdb_iterator_t {.
    cdecl, importc: "rocksdb_create_iterator_cf", dynlib: librocksdb.}
proc rocksdb_create_iterators*(db: ptr rocksdb_t; opts: ptr rocksdb_readoptions_t;
    column_families: ptr ptr rocksdb_column_family_handle_t;
                              iterators: ptr ptr rocksdb_iterator_t; size: csize;
                              errptr: cstringArray) {.cdecl,
    importc: "rocksdb_create_iterators", dynlib: librocksdb.}
proc rocksdb_create_snapshot*(db: ptr rocksdb_t): ptr rocksdb_snapshot_t {.cdecl,
    importc: "rocksdb_create_snapshot", dynlib: librocksdb.}
proc rocksdb_release_snapshot*(db: ptr rocksdb_t; snapshot: ptr rocksdb_snapshot_t) {.
    cdecl, importc: "rocksdb_release_snapshot", dynlib: librocksdb.}
##  Returns NULL if property name is unknown.
##    Else returns a pointer to a malloc()-ed null-terminated value.

proc rocksdb_property_value*(db: ptr rocksdb_t; propname: cstring): cstring {.cdecl,
    importc: "rocksdb_property_value", dynlib: librocksdb.}
##  returns 0 on success, -1 otherwise
